--- a/rest/public/index.html
+++ b/rest/public/index.html
@@ -303,7 +303,7 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-34e6c8f4.png" class="logo" alt="" />
+      <img src="images/avatar-c4e1c83b.png" class="logo" alt="" />
         <div class="lang-selector">
               <a href="#" data-language-name="javascript">javascript</a>
               <a href="#" data-language-name="python">python</a>
